# unimrcp-deps

./: README.md
NlsSdkCpp2.0/: CMakeLists.txt  readme.md
NlsSdkCpp2.0/demo/: sdkDemo.cpp  speechRecognizerDemo.cpp  speechRecognizerSyncDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp  speechTranscriberSyncDemo.cpp
NlsSpeechSdk-Release-1.3.4/: CMakeLists.txt  build.sh  readme.txt
NlsSpeechSdk-Release-1.3.4/demo/: asr-demo.cpp  config-asr.txt  config-realtime.txt  config-tts.txt  realtime-demo.cpp  sdkDemo.cpp  tts-demo.cpp
NlsSpeechSdk-Release-1.3.4/include/: NlsClient.h
xfyun/samples/asr_offline_record_sample/: asr_offline_record_sample.c
xfyun/samples/asr_offline_sample/: asr_offline_sample.c
xfyun/samples/iat_online_record_sample/: iat_online_record_sample.c
xfyun/samples/iat_online_sample/: iat_online_sample.c
xfyun/samples/ise_online_sample/: ise_online_sample.c
xfyun/samples/sch_translate_sample/: sch_speak_sample.c
xfyun/samples/tts_offline_sample/: tts_offline_sample.c
xfyun/samples/tts_online_sample/: tts_online_sample.c
